--- a/.cfnlintrc
+++ b/.cfnlintrc
@@ -1,6 +1,8 @@
-ignore_templates:
 ignore_checks:
+  - W3002  # This is for having to deploy templates using aws cloudformation package
+  - W3005
   - I1022  # Prefer sub over join on empty delimiter
+  - I3011  # Set explicit values for UpdateReplacePolicy / DeletionPolicy on potentially stateful resource
 include_checks:
   - I
 regions:
