--- a/root_stack.yml
+++ b/root_stack.yml
@@ -13,19 +13,19 @@ Resources:
     # S3Bucket:
     #     Type: AWS::CloudFormation::Stack
     #     Properties:
-    #         TemplateURL: !Sub https://s3.amazonaws.com/${BucketName}/s3.yml
+    #         TemplateURL: !Sub https://${BucketName}.s3.amazonaws.com/s3.yml
     #         Parameters:
     #             BucketName: !Ref BucketName
 
     VPCStack:
         Type: AWS::CloudFormation::Stack
         Properties:
-            TemplateURL: !Sub https://s3.amazonaws.com/${BucketName}/vpc.yml
+            TemplateURL: !Sub https://${BucketName}.s3.amazonaws.com/vpc.yml
 
     NATGatewayStack:
         Type: AWS::CloudFormation::Stack
         Properties:
-            TemplateURL: !Sub https://s3.amazonaws.com/${BucketName}/nat_gateway.yml
+            TemplateURL: !Sub https://${BucketName}.s3.amazonaws.com/nat_gateway.yml
             Parameters:
                 PublicSubnet1: !GetAtt VPCStack.Outputs.PublicSubnet1
                 PublicSubnet2: !GetAtt VPCStack.Outputs.PublicSubnet2
@@ -33,7 +33,7 @@ Resources:
     RouteTableStack:
         Type: AWS::CloudFormation::Stack
         Properties:
-            TemplateURL: !Sub https://s3.amazonaws.com/${BucketName}/route_tables.yml
+            TemplateURL: !Sub https://${BucketName}.s3.amazonaws.com/route_tables.yml
             Parameters:
                 VpcId: !GetAtt VPCStack.Outputs.VpcId
                 VpcName: !GetAtt VPCStack.Outputs.VpcName
@@ -47,14 +47,14 @@ Resources:
     SecurityGroupStack:
         Type: AWS::CloudFormation::Stack
         Properties:
-            TemplateURL: !Sub https://s3.amazonaws.com/${BucketName}/security_groups.yml
+            TemplateURL: !Sub https://${BucketName}.s3.amazonaws.com/security_groups.yml
             Parameters:
                 VpcId: !GetAtt VPCStack.Outputs.VpcId
 
     EC2Instance:
         Type: AWS::CloudFormation::Stack
         Properties:
-            TemplateURL: !Sub https://s3.amazonaws.com/${BucketName}/ec2.yml
+            TemplateURL: !Sub https://${BucketName}.s3.amazonaws.com/ec2.yml
             Parameters:
                 VpcId: !GetAtt VPCStack.Outputs.VpcId
                 PublicSubnet1: !GetAtt VPCStack.Outputs.PublicSubnet1
