--- a/vpc/vpc.yml
+++ b/vpc/vpc.yml
@@ -18,11 +18,11 @@ Mappings:
     PublicSubnet1:
       CIDR: 10.0.0.0/24
     PublicSubnet2:
-      CIDR: 10.0.0.1/24
+      CIDR: 10.0.1.0/24
     PrivateSubnet1:
-      CIDR: 10.0.0.2/24
+      CIDR: 10.0.2.0/24
     PrivateSubnet2:
-      CIDR: 10.0.0.3/24
+      CIDR: 10.0.3.0/24
 
 Resources:
   VPC:
@@ -46,11 +46,9 @@ Resources:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VPC
-      AvailabilityZone: !Sub
-        - ${AWS::Region}${AZ}
-        - AZ: !Select 
-          - 0
-          - !GetAZs 
+      AvailabilityZone: !Select 
+        - 0
+        - !GetAZs ''
       CidrBlock: !FindInMap 
         - SubnetConfig
         - PublicSubnet1
@@ -71,42 +69,38 @@ Resources:
                 - !GetAZs 
 
   PublicSubnet2:
-      Type: AWS::EC2::Subnet
-      Properties:
-        VpcId: !Ref VPC
-        AvailabilityZone: !Sub
-          - ${AWS::Region}${AZ}
-          - AZ: !Select 
-            - 1
-            - !GetAZs 
-        CidrBlock: !FindInMap 
-          - SubnetConfig
-          - PublicSubnet2
-          - CIDR
-        MapPublicIpOnLaunch: true # Indicates whether instances launched in this subnet receive a public IPv4 address
-        Tags:
-          - Key: Application
-            Value: !Ref AWS::StackName
-          - Key: Network
-            Value: Public
-          - Key: Name
-            Value: !Join 
-              - "-"
-              - - !Ref VpcName
-                - public
-                - !Select 
-                  - 1
-                  - !GetAZs 
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VPC
+      AvailabilityZone: !Select 
+        - 1
+        - !GetAZs ''
+      CidrBlock: !FindInMap 
+        - SubnetConfig
+        - PublicSubnet2
+        - CIDR
+      MapPublicIpOnLaunch: true # Indicates whether instances launched in this subnet receive a public IPv4 address
+      Tags:
+        - Key: Application
+          Value: !Ref AWS::StackName
+        - Key: Network
+          Value: Public
+        - Key: Name
+          Value: !Join 
+            - "-"
+            - - !Ref VpcName
+              - public
+              - !Select 
+                - 1
+                - !GetAZs 
 
   PrivateSubnet1:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VPC
-      AvailabilityZone: !Sub
-        - ${AWS::Region}${AZ}
-        - AZ: !Select
-          - 0
-          - !GetAZs
+      AvailabilityZone: !Select
+        - 0
+        - !GetAZs ''
       CidrBlock: !FindInMap 
         - SubnetConfig
         - PrivateSubnet1
@@ -129,11 +123,9 @@ Resources:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VPC
-      AvailabilityZone: !Sub
-        - ${AWS::Region}${AZ}
-        - AZ: !Select
-          - 1
-          - !GetAZs
+      AvailabilityZone: !Select
+        - 1
+        - !GetAZs ''
       CidrBlock: !FindInMap 
         - SubnetConfig
         - PrivateSubnet2
