--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,8 @@ env:
   variables:
     CF_LINT_VERSION: 1.18.4
     TASKCAT_VERSION: 0.9.55
-    ARTIFACT_BUCKET: devops-taskcat-outputs
+    TEMPLATES_BUCKET: devopsuit-templates
+    TASKCAT_BUCKET: devopsuit-taskcat-output
 
 phases:
   install:
@@ -13,19 +14,20 @@ phases:
     commands:
       - pip install cfn-lint==$CF_LINT_VERSION
       - pip install taskcat==$TASKCAT_VERSION
-      - aws s3 mb s3://$ARTIFACT_BUCKET
 
   pre_build:
     commands:
-      - cfn-lint -p .
+      - cfn-lint -p templates/*.yml
 
   build:
     commands:
       - taskcat test run
+      - cd templates && zip templates.zip *.yml
 
   post_build:
     commands:
-      - aws s3 sync taskcat_outputs/ s3://$ARTIFACT_BUCKET
+      - aws s3 sync taskcat_outputs/ s3://$TASKCAT_BUCKET --acl public-read --delete
+      - aws s3 cp templates s3://$TEMPLATES_BUCKET --delete
 
 artifacts:
   files:
