--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,30 @@
 .env
 .vscode/
 .venv
+/.idea/
+
+# TaskCat outputs
+taskcat_outputs/
+.taskcat/
+.taskcat_overrides.yml
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
