--- a/codecommit/templates/main.yml
+++ b/codecommit/templates/main.yml
@@ -1,75 +1,74 @@
 AWSTemplateFormatVersion: "2010-09-09"
 
-Description: >-
-                This is a nested stack that creates a EC2 instance in a VPC with public and private subnets
+Description: This is a nested stack that creates a EC2 instance in a VPC with public and private subnets
 
 Parameters:
-    BucketName:
-        Description: The name of the S3 bucket
-        Type: String
-        Default: group03-s3-bucket
+  BucketName:
+    Description: The name of the S3 bucket
+    Type: String
+    Default: devopsuit-templates
 
 Resources:
-    VPCStack:
-        Type: AWS::CloudFormation::Stack
-        Properties:
-            TemplateURL: !Sub https://${BucketName}.s3.amazonaws.com/vpc.yml
+  VPCStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: !Sub https://${BucketName}.s3.amazonaws.com/vpc.yml
 
-    NATGatewayStack:
-        Type: AWS::CloudFormation::Stack
-        Properties:
-            TemplateURL: !Sub https://${BucketName}.s3.amazonaws.com/nat_gateway.yml
-            Parameters:
-                VpcId: !GetAtt VPCStack.Outputs.VpcId
-                VpcName: !GetAtt VPCStack.Outputs.VpcName
-                PublicSubnet1: !GetAtt VPCStack.Outputs.PublicSubnet1
-                PublicSubnet2: !GetAtt VPCStack.Outputs.PublicSubnet2
+  NATGatewayStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: !Sub https://${BucketName}.s3.amazonaws.com/nat_gateway.yml
+      Parameters:
+        VpcId: !GetAtt VPCStack.Outputs.VpcId
+        VpcName: !GetAtt VPCStack.Outputs.VpcName
+        PublicSubnet1: !GetAtt VPCStack.Outputs.PublicSubnet1
+        PublicSubnet2: !GetAtt VPCStack.Outputs.PublicSubnet2
 
-    RouteTableStack:
-        Type: AWS::CloudFormation::Stack
-        Properties:
-            TemplateURL: !Sub https://${BucketName}.s3.amazonaws.com/route_tables.yml
-            Parameters:
-                VpcId: !GetAtt VPCStack.Outputs.VpcId
-                VpcName: !GetAtt VPCStack.Outputs.VpcName
-                PublicSubnet1: !GetAtt VPCStack.Outputs.PublicSubnet1
-                PublicSubnet2: !GetAtt VPCStack.Outputs.PublicSubnet2
-                NATGateway1: !GetAtt NATGatewayStack.Outputs.NATGateway1
-                NATGateway2: !GetAtt NATGatewayStack.Outputs.NATGateway2
-                PrivateSubnet1: !GetAtt VPCStack.Outputs.PrivateSubnet1
-                PrivateSubnet2: !GetAtt VPCStack.Outputs.PrivateSubnet2
-                InternetGateway: !GetAtt NATGatewayStack.Outputs.InternetGateway
+  RouteTableStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: !Sub https://${BucketName}.s3.amazonaws.com/route_tables.yml
+      Parameters:
+        VpcId: !GetAtt VPCStack.Outputs.VpcId
+        VpcName: !GetAtt VPCStack.Outputs.VpcName
+        PublicSubnet1: !GetAtt VPCStack.Outputs.PublicSubnet1
+        PublicSubnet2: !GetAtt VPCStack.Outputs.PublicSubnet2
+        NATGateway1: !GetAtt NATGatewayStack.Outputs.NATGateway1
+        NATGateway2: !GetAtt NATGatewayStack.Outputs.NATGateway2
+        PrivateSubnet1: !GetAtt VPCStack.Outputs.PrivateSubnet1
+        PrivateSubnet2: !GetAtt VPCStack.Outputs.PrivateSubnet2
+        InternetGateway: !GetAtt NATGatewayStack.Outputs.InternetGateway
 
-    SecurityGroupStack:
-        Type: AWS::CloudFormation::Stack
-        Properties:
-            TemplateURL: !Sub https://${BucketName}.s3.amazonaws.com/security_groups.yml
-            Parameters:
-                VpcId: !GetAtt VPCStack.Outputs.VpcId
+  SecurityGroupStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: !Sub https://${BucketName}.s3.amazonaws.com/security_groups.yml
+      Parameters:
+        VpcId: !GetAtt VPCStack.Outputs.VpcId
 
-    EC2InstanceStack:
-        Type: AWS::CloudFormation::Stack
-        Properties:
-            TemplateURL: !Sub https://${BucketName}.s3.amazonaws.com/ec2.yml
-            Parameters:
-                VpcId: !GetAtt VPCStack.Outputs.VpcId
-                PublicSubnet1: !GetAtt VPCStack.Outputs.PublicSubnet1
-                PublicSubnet2: !GetAtt VPCStack.Outputs.PublicSubnet2
-                PrivateSubnet1: !GetAtt VPCStack.Outputs.PrivateSubnet1
-                PrivateSubnet2: !GetAtt VPCStack.Outputs.PrivateSubnet2
-                PublicEC2SG: !GetAtt SecurityGroupStack.Outputs.PublicEC2SG
-                PrivateEC2SG: !GetAtt SecurityGroupStack.Outputs.PrivateEC2SG
+  EC2InstanceStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: !Sub https://${BucketName}.s3.amazonaws.com/ec2.yml
+      Parameters:
+        VpcId: !GetAtt VPCStack.Outputs.VpcId
+        PublicSubnet1: !GetAtt VPCStack.Outputs.PublicSubnet1
+        PublicSubnet2: !GetAtt VPCStack.Outputs.PublicSubnet2
+        PrivateSubnet1: !GetAtt VPCStack.Outputs.PrivateSubnet1
+        PrivateSubnet2: !GetAtt VPCStack.Outputs.PrivateSubnet2
+        PublicEC2SG: !GetAtt SecurityGroupStack.Outputs.PublicEC2SG
+        PrivateEC2SG: !GetAtt SecurityGroupStack.Outputs.PrivateEC2SG
 
 Outputs:
-    PublicEC2Instance1:
-        Description: Public EC2 Instance 1
-        Value: !GetAtt EC2InstanceStack.Outputs.PublicEC2Instance1
-    PublicEC2Instance2:
-        Description: Public EC2 Instance 2
-        Value: !GetAtt EC2InstanceStack.Outputs.PublicEC2Instance2
-    PrivateEC2Instance1:
-        Description: Private EC2 Instance 1
-        Value: !GetAtt EC2InstanceStack.Outputs.PrivateEC2Instance1
-    PrivateEC2Instance2:
-        Description: Private EC2 Instance 2
-        Value: !GetAtt EC2InstanceStack.Outputs.PrivateEC2Instance2
+  PublicEC2Instance1:
+    Description: Public EC2 Instance 1
+    Value: !GetAtt EC2InstanceStack.Outputs.PublicEC2Instance1
+  PublicEC2Instance2:
+    Description: Public EC2 Instance 2
+    Value: !GetAtt EC2InstanceStack.Outputs.PublicEC2Instance2
+  PrivateEC2Instance1:
+    Description: Private EC2 Instance 1
+    Value: !GetAtt EC2InstanceStack.Outputs.PrivateEC2Instance1
+  PrivateEC2Instance2:
+    Description: Private EC2 Instance 2
+    Value: !GetAtt EC2InstanceStack.Outputs.PrivateEC2Instance2
